# 2018-pneumonia

./: .gitignore  CLAUDE.md  mise.toml  pyproject.toml
data/: RSNA-2018-Pneumonia-Detection-Challenge-Dataset-Description.md
lib/: dataset_summary.py  label_images.py
notebooks/: 1_exploration.ipynb  2_knn.ipynb  3_cnn.ipynb
