[project]
name = "2018-pneumonia"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pydicom>=3.0.1",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
]
